# gust

./: .gitignore  .gitmodules  CITATION.cff  Dev_Setup.sh  README.md  README.rst  after_install.sh  build_cmr_manager.sh  build_radio_manager.sh  build_radiomanager.sh  build_sil.sh  build_wsgi.sh  build_zed_manager.sh  convert_ui_files.py  debug_release.bash  deploy_gust.py  do_release.py  docker-compose.yml  dockerfile_deploy  kill_conn.sh  kill_server  make_icons.py  package_gust.py  release_gust.sh  release_with_docker.sh  run_gust.bash  run_gust.sh  setup_gunicorn.sh  start_docker.sh
.devcontainer/: Dockerfile  Dockerfile_dev  devcontainer.json  entrypoint.bash  entrypoint.sh
admin/: after_install.sh  dev_setup.sh
admin/build_scripts/: build_ardupilot_sil.sh  build_cmr_manager.sh  build_documentation.sh  build_radio_manager.sh  build_wsgi.sh  build_zed_manager.sh
build_scripts/: build_ardupilot_sil.sh  build_cmr_manager.sh  build_documentation.bash  build_documentation.sh  build_radio_manager.sh  build_sil.sh  build_wsgi.sh  build_zed_manager.sh  release_gust.bash
conn_server/: setup.cfg
docker_files/: .dockerignore  Dockerfile_Jetson  Dockerfile_ardupilotSIL_jetson  Dockerfile_fbs_repo  Dockerfile_lager_sensors_repo
docs/: dronekit_mavlink_output  mavlink_packets
docs/dev_resources/: gust_database.odt  sample_mavlinkpng
docs/source/: api_references.rst  cite.rst  conf.py  getting_started.rst  guide.rst  index.rst  intro.rst
gust_packages/cmr_manager/: setup.cfg
gust_packages/radio_manager/: setup.cfg
gust_packages/radio_manager/src/radio_manager/: __init__.py  cli.py  dronekit_functions.py  dronekit_test.py  test_upload2.py  upload_test.py
gust_packages/wsgi_apps/: setup.cfg
gust_packages/wsgi_apps/src/wsgi_apps/: __init__.py  cli.py
gust_packages/wsgi_apps/src/wsgi_apps/api/: app.py  settings.py
gust_packages/wsgi_apps/src/wsgi_apps/api/resources/: drone_namespace.py  zed_namespace.py
gust_packages/zed_manager/: setup.cfg
radio_manager/: setup.cfg
server/: main.py  wsgi.py
server/api/: app.py  config.py
server/resources/: default.py
utilities/: setup.cfg
utilities/src/utilities/: __init__.py  convert_ui_files.py  database.py  icon_generator.py  make_icons.py
wsgi_apps/: setup.cfg
(+144 files in other folders)
