[metadata]
name = utilities
version = 0.1.0
url = https://github.com/drjdlarson/gust
author = Laboratory for Autonomy GNC and Estimation Research (LAGER)
description = A package of utilities for the GUST GCS.
license = GPL
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    pyqt5
python_requires = >=3.7, <3.8


[options.packages.find]
where=src
