[metadata]
name = radio_manager
version = 0.0.0
url = https://github.com/drjdlarson/gust
author = Laboratory for Autonomy GNC and Estimation Research (LAGER)
description = Radio manager for GCS backend
license = GPL
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires= ==3.7.*


[options.packages.find]
where=src

