[metadata]
name = wsgi_apps
version = 0.1.0
url = https://github.com/drjdlarson/gust
author = Laboratory for Autonomy GNC and Estimation Research (LAGER)
description = A package of wsgi apps for the GUST GCS.
license = GPL
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    flask==2.0.2
    flask-restx==0.5.1
    pyserial
python_requires = >=3.7


[options.packages.find]
where=src
